2010-10-10  Steffen Gebert  <steffen@steffen-gebert.de>

	* Added feature #15783: Improve ExtJS skin: Tabs

2010-10-10  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #15690: Change text of exception in t3lib_cache_frontend_stringfrontend
	* Fixed bug #15944: Flashmessage "content_from_pid" misses page title

2010-10-09  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #8785: TCAselectItem not working for all tables (Thanks to Sebastian  Michaelsen)
	* Added feature #14658: Feature: internal links with parameters outside the RTE (headlines, images ...)
	* Fixed bug #15828: Enhance the ExtDirect debugging feature (Thanks to Stefan Galinski)
	* Fixed bug #15865 clickmenu breaks if no record set. (Thanks to Bjoern Pedersen)
	* Fixed bug #15230: Bug/Feature: Core only is able to load one specific IE6 CSS file (Thanks to Steffen Ritter)
	* Fixed bug #15869: Feature: t3lib_iconWorks is less flexible in mapping Icons to record rows (Thanks to Steffen Ritter)
	* Fixed bug #15870: bug More instances of split() (Thanks to Jigal van Hemert)

2010-10-08  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #15580: Add calls to logDeprecatedFunction() for more deprecated functions and adjust log messages
	* Added feature #15611: Hide new translations of content elements by default (thanks to Jigal van Hemert)

2010-10-07  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #15772:  template::getHtmlTemplate() doesn't allow absolute file paths (thanks to Jigal van Hemert and Peter Russ)

2010-10-06  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to bug #15880: htmlArea RTE: Context menu not working in TYPO3 4.4.3 and 4.5-dev
	* Fixed bug #15893: htmlArea RTE: Insufficient Check for BE / FE Context (Thanks to Ingo Renner)

2010-10-06  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #15840: Broken loading icon when loading IRRE elements (thanks to Lars Houmark)

2010-10-06  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #15784: Resolve errors in tslib_content
