@@ -44,6 +44,7 @@ class t3lib_PageRenderer implements t3lib_Singleton {
 
 	protected $moveJsFromHeaderToFooter = FALSE;
 
+	/* @var t3lib_cs Instance of t3lib_cs */
 	protected $csConvObj;
 	protected $lang;
 
@@ -81,6 +82,7 @@ class t3lib_PageRenderer implements t3lib_Singleton {
 
 	// static inline code blocks
 	protected $jsInline = array ();
+	protected $jsFooterInline = array ();
 	protected $extOnReadyCode = array ();
 	protected $cssInline = array ();
 
@@ -127,6 +129,9 @@ class t3lib_PageRenderer implements t3lib_Singleton {
 	protected $inlineSettings = array ();
 
 	protected $inlineJavascriptWrap = array ();
+
+	// saves error messages generated during compression
+	protected $compressError = '';
 
 	// used by BE modules
 	public $backPath;
@@ -986,7 +991,7 @@ class t3lib_PageRenderer implements t3lib_Singleton {
 	 * @param boolean $forceOnTop
 	 * @return void
 	 */
-	public function addCssInlineBlock($name, $block, $compressed = FALSE, $forceOnTop = FALSE) {
+	public function addCssInlineBlock($name, $block, $compress = FALSE, $forceOnTop = FALSE) {
 		if (!isset($this->cssInline[$name]) && !empty($block)) {
 			$this->cssInline[$name] = array (
 				'code'       => $block,
@@ -1234,7 +1239,6 @@ class t3lib_PageRenderer implements t3lib_Singleton {
 		$jsFooterInline = '';
 		$jsFooterLibs = '';
 		$jsFooterFiles = '';
-		$noJS = FALSE;
 
 		// preRenderHook for possible manuipulation
 		if (is_array($GLOBALS['TYPO3_CONF_VARS']['SC_OPTIONS']['t3lib/class.t3lib_pagerenderer.php']['render-preProcess'])) {
@@ -1388,7 +1392,7 @@ class t3lib_PageRenderer implements t3lib_Singleton {
 		$templateFile = t3lib_div::getFileAbsFileName($this->templateFile, TRUE);
 		$template = t3lib_div::getURL($templateFile);
 
-		if ($this->removeEmptyLinesFromTemplate) {
+		if ($this->removeLineBreaksFromTemplate) {
 			$template = strtr($template, array(LF => '', CR => ''));
 		}
 		if ($part != self::PART_COMPLETE) {
@@ -1673,7 +1677,6 @@ class t3lib_PageRenderer implements t3lib_Singleton {
 			t3lib_div::callUserFunction($GLOBALS['TYPO3_CONF_VARS'][TYPO3_MODE]['jsCompressHandler'], $params, $this);
 		} else {
 				// traverse the arrays, compress files
-			$this->compressError = '';
 
 			if ($this->compressJavascript) {
 				if (count($this->jsInline)) {
